<resources>
    <string name="app_name">Money Manager App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="rp_1_000_000">Rp 1.000.000</string>
    <string name="amount">AMOUNT:</string>
    <string name="type">TYPE:</string>
    <string name="note">NOTE:</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="income_is_empty">Income is empty</string>
    <string name="expense_is_empty">Expense is empty</string>
    <string name="item_more">Item More</string>
    <string name="update">Update</string>
    <string name="rp">Rp</string>
    <string name="dollar_logo">$</string>
    <string name="euro_logo">€</string>
    <string name="none">None</string>
    <string name="nominal_format">%s %s</string>
    <string-array name="type_options">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
</resources>