<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="income_size"
            type="Integer" />

        <variable
            name="expense_size"
            type="Integer" />

        <variable
            name="total_income"
            type="String" />

        <variable
            name="total_expense"
            type="String" />

        <variable
            name="viewmodel"
            type="com.cuncisboss.moneymanagerapp.viewmodel.ExpenseViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.fragment.DashboardFragment">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:id="@+id/linear_title"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/md_blue_100"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/income"
                            android:textColor="@color/md_blue_900"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/md_blue_900"
                            android:textSize="24sp"
                            android:text="@{total_income}"
                            tools:text="@string/rp_1_000_000" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/expense"
                            android:textColor="@color/errorColor"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/errorColor"
                            android:textSize="24sp"
                            android:text="@{total_expense}"
                            tools:text="@string/rp_1_000_000" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/linear_title"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:adapter="@{viewmodel.incomeAdapter}"
                        android:orientation="horizontal"
                        android:layout_marginTop="6dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income_is_empty"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:visibility="@{income_size == 0 ? View.VISIBLE : View.GONE}"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_marginTop="30dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:adapter="@{viewmodel.expenseAdapter}"
                        android:orientation="horizontal"
                        android:layout_marginTop="6dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense_is_empty"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:visibility="@{expense_size == 0 ? View.VISIBLE : View.GONE}"/>
                </LinearLayout>

            </RelativeLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab"
            android:src="@drawable/ic_baseline_add"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> viewmodel.clickListener()}"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/view_bot"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:id="@+id/view_bot"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</layout>